output/goodcompound_p5_25_124/foundry_validation/F-001_Legacy_mint_accounting_overissues_cToken/forge_stdout_attempt1.log
Compiler run failed:
Error (9429): This looks like an address but has an invalid checksum. Correct checksummed address: "0x4Ddc2D193948926D02f9B1fE9e1daa0718270ED5". If this is not used as an address, please prepend '00'. For more information please see https://docs.soliditylang.org/en/develop/types.html#address-literals
SyntaxError: This looks like an address but has an invalid checksum. Correct checksummed address: "0x4Ddc2D193948926D02f9B1fE9e1daa0718270ED5". If this is not used as an address, please prepend '00'. For more information please see https://docs.soliditylang.org/en/develop/types.html#address-literals
  --> src/FlawVerifier.sol:26:38:
   |
26 |     address internal constant CETH = 0x4Ddc2D193948926D02f9B1fE9E1daa0718270ED5;
   |                                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

Error (9429): This looks like an address but has an invalid checksum. Correct checksummed address: "0x1985365e9f78359a9B6AD760e32412f4a445E862". If this is not used as an address, please prepend '00'. For more information please see https://docs.soliditylang.org/en/develop/types.html#address-literals
SyntaxError: This looks like an address but has an invalid checksum. Correct checksummed address: "0x1985365e9f78359a9B6AD760e32412f4a445E862". If this is not used as an address, please prepend '00'. For more information please see https://docs.soliditylang.org/en/develop/types.html#address-literals
  --> src/FlawVerifier.sol:34:37:
   |
34 |     address internal constant REP = 0x1985365e9F78359a9B6AD760e32412f4a445E862;
   |                                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

